# pandas-plots

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  test.ipynb  test_new_structure.py  test_split.py
.github/workflows/: publish.yml
docs/: notes.md
src/: convert.ipynb  pandas.py  plots.py  t.ipynb  test.html  test.ipynb  test.r
src/assets/: dsich.csv  facets.csv
src/docs/: t.md  test.html  test.md
src/pandas_plots/: __init__.py  const.py  helper.py  hlp.py  legacy.py  pandas.py  pii.py  pls.py  sql.py  tbl.py  txt.py  ven.py
src/pandas_plots/_DEPR/: ven.py
src/pandas_plots/cli/: converter.py
src/pandas_plots/hlp/: __init__.py  add_bitmask_label.py  add_datetime_columns.py  add_measures_to_pyg_config.py  create_barcode_from_url.py  create_py_script.py  export_plot_data.py  find_cols.py  find_str_in_duckdb.py  get_duckdb_filter_n.py  get_sparse_df.py  get_tum_details.py  group_kkr.py  is_ipynb.py  mean_confidence_interval.py  prepend_uv_header.py  print_filter.py  replace_delimiter_outside_quotes.py  set_theme.py  setup_rendering.py  show_package_version_get_os.py  to_series.py  wrap_text.py
src/pandas_plots/pls/: __init__.py  plot_bars.py  plot_box.py  plot_box_large.py  plot_boxes.py  plot_boxes_large.py  plot_facet_stacked_bars.py  plot_histogram.py  plot_histogram_large.py  plot_joint.py  plot_pie.py  plot_quadrants.py  plot_sankey.py  plot_stacked_bars.py  plot_uml_graph.py  plot_upset.py  plot_venn2.py  plot_venn3.py
src/pandas_plots/tbl/: __init__.py  descr_db.py  describe_df.py  pivot_df.py  print_summary.py  show_num_df.py
src/pandas_plots/ven/: __init__.py  show_venn2.py  show_venn3.py
