[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"

# [project]
# name = "pandas-plots"
# version = "0.8.2"
# requires-python = ">=3.10"
# description = "A collection of helper for table handling and vizualization"
# readme = "README.md"
# authors = [{ name = "smeisegeier", email = "dexterDSDo@googlemail.com" }]
# license = { text = "MIT licence" }
# # license = { file = "LICENSE" }
# classifiers = [
#     "License :: OSI Approved :: MIT License",
#     "Programming Language :: Python :: 3",
#     "Programming Language :: Python :: 3.10",
#     'Development Status :: 4 - Beta',
#     'Intended Audience :: Science/Research',
#     'Operating System :: OS Independent',
#     'Topic :: Scientific/Engineering'    
# ]
# keywords = ["tables", "pivot", "plotly", "venn", "plot", "vizualization"]
# dependencies = [
#     "pandas >= 2.0.0",
#     "plotly >= 5.18.0",
#     "matplotlib >= 3.8.2",
#     "matplotlib-venn >= 0.11.10",
#     "seaborn >= 0.13.2",
#     "sqlalchemy < 2.0.0",
#     "Jinja2 >= 3.1.3",
# ]

# # [project.optional-dependencies]
# # dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

# [project.urls]
# homepage = "https://github.com/smeisegeier/pandas-plots"
# repository = "https://github.com/smeisegeier/pandas-plots"

# # [project.scripts]
# # realpython = "reader.__main__:main"