[project]
name = "pandas-plots"
version = "0.16.8"
description = "A collection of helper for table handling and visualization"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["tables", "pivot", "plotly", "venn", "plot", "vizualization"]
authors = [
    { name = "smeisegeier", email = "dexterDSD@googlemail.com" },
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering'    
]

dependencies = [
    "pandas>=2.0.0",
    "plotly>=6.2", # upgrade from 5.24
    "kaleido>=1", # needed for plotly export, must be manually added
    "matplotlib>=3.8.2",
    "matplotlib-inline",    # nneded after matplotlib 3.8
    "matplotlib-venn==0.11.10",
    "seaborn>=0.13.2",
    "Jinja2>=3.1.4",
    "requests>=2.32.0",
    "numpy<2.0.0",
    "missingno>=0.5.2",
    "duckdb>=1.3.0",
    "nbformat>=4.2.0",
    "dataframe_image>=0.2.6",
    "connection-helper>=0.12",
]

[project.scripts]
jupyter-to-md = "pandas_plots.cli.converter:main"
test = "pandas_plots.cli.converter:test"

[project.urls]
Homepage = "https://github.com/smeisegeier/pandas-plots"
Repository = "https://github.com/smeisegeier/pandas-plots"
"Bug Tracker" = "https://github.com/smeisegeier/pandas-plots/issues"

# [build-system]
# requires = ["hatchling"] # Use hatchling as the build tool
# build-backend = "hatchling.build"

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

# Hatchling automatically discovers packages in 'src' by default.
# No need for a separate [tool.setuptools.packages.find] section.
