[metadata]
name = pandas-plots
version = 0.9.7
author = smeisegeier
author_email = dexterDSDo@googlemail.com
description = A collection of helper for table handling and vizualization
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
url = https://github.com/smeisegeier/pandas-plots
project_urls =
    Documentation   = https://github.com/smeisegeier/pandas-plots
    Source Code     = https://github.com/smeisegeier/pandas-plots
    Bug Tracker     = https://github.com/smeisegeier/pandas-plots/issues
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.10
install_requires =
    pandas >= 2.0.0
    plotly >= 5.18.0
    matplotlib >= 3.8.2
    matplotlib-venn >= 0.11.10
    seaborn >= 0.13.2
    Jinja2 >= 3.1.3
    requests >= 2.31.0